test/test_error_incomplete_expr.lin
// RUN: not %linc build %s -o %t 2>&1 | FileCheck %s

// CHECK: error: Expect expression.

42 +